--- a/React-Todo_List/src/index.css
+++ b/React-Todo_List/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: hsla(100, 7%, 75%, 0.323);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -42,12 +42,12 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #0c1f08b5;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #46972b25;
 }
 button:focus,
 button:focus-visible {
@@ -56,7 +56,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #abbf4e4e;
     background-color: #ffffff;
   }
   a:hover {
